[gd_scene load_steps=14 format=2]

[ext_resource path="res://pawns/actor.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/character_v2_looking front.png" type="Texture" id=2]
[ext_resource path="res://Assets/Audio/SFX/powerUp5.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/others/light.png" type="Texture" id=4]
[ext_resource path="res://Assets/sprites/character_v2_eyes_closed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/SFX/powerUp3.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "blink"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 4.8, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "bump"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1.5, -9 ), Vector2( 6.5, 2.5 ), Vector2( -11.5, 8.5 ), Vector2( 4, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.9375, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 0.303143, 2.61003, 1 ),
"update": 0,
"values": [ Vector2( 1.43051e-06, -1.90735e-06 ), Vector2( 1.43051e-06, -1.90735e-06 ), Vector2( 0, -20 ), Vector2( 1.43051e-06, -1.90735e-06 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 0.354553, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.20007, 0.917384 ), Vector2( 0.916712, 1.13495 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

// help: https://youtu.be/AOKZ3ZE9ohI
// help: https://youtu.be/zpIjme5Ah7Q

uniform vec4 OLDCOLOR1 : hint_color;
uniform vec4 OLDCOLOR2 : hint_color;

uniform vec4 NEWCOLOR1 : hint_color;
uniform vec4 NEWCOLOR2 : hint_color;

void fragment() {
	vec4 curr_color = texture(TEXTURE, UV); // get current color of pixel
	
	// lets check that our current pixel colour is any of the OLDCOLORs we wish to swap
	// if our pixel is an old colour then swap COLOR to NEWCOLOR
	if (curr_color.a > 0.25){
		COLOR = NEWCOLOR1;
	}
	if (curr_color.r > 0.45 && curr_color.g > 0.45 && curr_color.b > 0.45){
		COLOR = NEWCOLOR1;
	}
	else{
		COLOR = curr_color;
	}
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 8 )
shader_param/OLDCOLOR1 = Color( 1, 1, 1, 1 )
shader_param/OLDCOLOR2 = Color( 0.360784, 0.360784, 0.360784, 1 )
shader_param/NEWCOLOR1 = Color( 0.956863, 0.533333, 0.0823529, 1 )
shader_param/NEWCOLOR2 = Color( 0.839216, 0.00392157, 0.866667, 1 )

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[node name="Actor" type="Node2D"]
position = Vector2( 32, 32 )
z_index = 1
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/blink = SubResource( 7 )
anims/bump = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 1.43051e-06, -1.90735e-06 )
scale = Vector2( 0.956826, 1.10415 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -32, -32 )

[node name="Name" type="Label" parent="."]
margin_left = -30.0
margin_top = -43.0
margin_right = 29.0
margin_bottom = -26.0
text = "namae"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cannot_move_sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
texture_scale = 0.6
shadow_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
editor_draw_drag_margin = true

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -501.0
margin_top = -285.0
margin_right = 495.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Match_timer" type="Label" parent="Camera2D/VBoxContainer"]
material = SubResource( 3 )
margin_right = 996.0
margin_bottom = 14.0
text = "null"

[node name="notification_container" type="VBoxContainer" parent="Camera2D"]
margin_left = -497.0
margin_top = 208.0
margin_right = 483.0
margin_bottom = 285.0
grow_vertical = 0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ItsATrapBino" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
